finalizando o projeto com o carousel

--- a/Bootstrap/Projetos/Spotify/css/estilo.css
+++ b/Bootstrap/Projetos/Spotify/css/estilo.css
@@ -76,6 +76,11 @@ nav.navbar-transparante{
     color: black;
 }
 
+.carousel-control-next, .carousel-control-prev{
+    width: 5%;
+}
+
+
 /* Estrutura conteúdos */
 
 .caixa{
